# RatCalc

./: .gitignore  BenchmarkPi.hs  Cauchy.hs  ConversionUtils.hs  Debug.hs  DyadicRational.hs  DyadicRationalStream.hs  Estimator.hs  Interval.hs  LICENSE  Limits.hs  README  RatCalcTest.hs  RealArithmetic.hs  SignedBinaryDigit.hs  SignedBinaryDigitStream.hs  TestUtils.hs  circle.yml  ratcalc.cabal  stack.yaml
app/: Main.hs
development-scripts/: benchmarkall.sh  make.sh  plotbenchmarks.sh  runnightlybenchmark.sh
git-hooks/: pre-commit
libratcalc-src/RatCalc/: Arithmetic.hs  BuildConfig.hs  Cauchy.hs  ConversionUtils.hs  Debug.hs  Estimator.hs  Exponential.hs  Interval.hs  Limits.hs  Trigonometry.hs
libratcalc-src/RatCalc/Data/: GenericTree.hs
libratcalc-src/RatCalc/Data/GenericTree/: Zipper.hs
libratcalc-src/RatCalc/Functions/: Exponential.hs  Trigonometry.hs
libratcalc-src/RatCalc/Number/: ExactReal.hs  RealNumber.hs  SignedBinaryDigitStreamRepresentation.hs
libratcalc-src/RatCalc/Representation/: DyadicRational.hs  DyadicRationalStream.hs  SignedBinaryDigit.hs  SignedBinaryDigitStream.hs
libratcalc-src/RatCalc/Symbolic/: Expression.hs
libratcalc-src/RatCalc/Symbolic/Expression/: PrettyPrint.hs
ratcalc-src/: Main.hs
ratcalc-src/RatCalc/Text/: Table.hs
ratcalc-test/: Benchmark.hs  BenchmarkPi.hs  ShowTable.hs
ratcalc-test/RatCalc/: QuickChecks.hs  RatCalcTest.hs  RunAllTests.hs  RunInfiniteTests.hs  RunQuickChecks.hs  Tests.hs  UnitTests.hs
ratcalc-test/RatCalc/Data/: Tests.hs
ratcalc-test/RatCalc/Data/GenericTree/: Tests.hs
ratcalc-test/RatCalc/Data/GenericTree/Zipper/: Tests.hs
ratcalc-test/RatCalc/Functions/Trigonometry/: PrintPi.hs
ratcalc-test/RatCalc/Number/: Tests.hs
ratcalc-test/RatCalc/Number/SignedBinaryDigitStreamRepresentation/: Tests.hs
ratcalc-test/RatCalc/Symbolic/: Tests.hs
ratcalc-test/RatCalc/Symbolic/Expression/: Tests.hs
ratcalc-test/RatCalc/Test/QuickCheck/: Utils.hs
ratcalc-test/Test/: RatCalc.hs
ratcalc-test/Test/RatCalc/: QuickChecks.hs  UnitTests.hs
ratcalc-test/Test/RatCalc/Symbolic/: Expression.hs
src/Xyxyx/RatCalc/: ConstructiveReal.hs
src/Xyxyx/RatCalc/ConstructiveReal/: B.hs  Num.hs
test/Xyxyx/RatCalc/: ConstructiveRealSpec.hs
