--
-- RatCalc - An infinite precision numeric computation framework
-- Copyright (C) 2011 Jim Farrand
-- This build file is free software: you can redistribute it and/or modify
-- it without restriction
--
-- This build file is distributed in the hope that it will be useful,
-- but WITHOUT ANY WARRANTY; without even the implied warranty of
-- MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
--
-- The majority of RatCalc is distributed under the terms of the GNU General
-- Public License as published by the Free Software Foundation, either version
-- 3 of the License, or (at your option) any later version.
--
-- You should have received a copy of the GNU General Public License along with
-- this program.  If not, see <http://www.gnu.org/licenses/

Name:RatCalc
Version:0.4.1
Cabal-Version:  >= 1.9.2
License:GPL-3
License-File:LICENSE
Author:Jim Farrand
Homepage:http://xyxyx.org/ratcalc
Category:Testing
Synopsis:A lazy, infinite precision numeric library

Library
    Build-Depends:      base, containers, parallel, parsec
    Exposed-Modules:
                        RatCalc.Arithmetic,
                        RatCalc.Cauchy,
                        RatCalc.ConversionUtils,
                        RatCalc.Data.GenericTree,
                        RatCalc.Data.GenericTree.Zipper,
                        RatCalc.Debug,
                        RatCalc.Estimator,
                        RatCalc.Functions.Exponential,
                        RatCalc.Functions.Trigonometry,
                        RatCalc.Interval,
                        RatCalc.Limits,
                        RatCalc.Number.ExactReal,
                        RatCalc.Number.SignedBinaryDigitStreamRepresentation,
                        RatCalc.Representation.DyadicRational,
                        RatCalc.Representation.DyadicRationalStream,
                        RatCalc.Representation.SignedBinaryDigit,
                        RatCalc.Representation.SignedBinaryDigitStream,
                        RatCalc.Symbolic.Expression
                        RatCalc.Symbolic.Expression.PrettyPrint
    Hs-Source-Dirs:     libratcalc-src
    ghc-options:        -W -O2

-- -threaded -feager-blackholing -rtsopts

Executable ratcalc
    Build-Depends:      base, containers, readline, terminfo, RatCalc
    Main-Is:            Main.hs
    Hs-Source-Dirs:     ratcalc-src
    Ghc-Options:        -W -O2

Executable              ratcalc_infinite_tests
    Build-Depends:      base, containers, RatCalc
    Main-Is:            RatCalc/RunInfiniteTests.hs
    Hs-Source-Dirs:     ratcalc-src, ratcalc-test
    Ghc-Options:        -W -O2

Test-Suite ratcalc_tests
    type:               exitcode-stdio-1.0
    Main-Is:            RatCalc/RunAllTests.hs
    Build-Depends:      base, QuickCheck, HUnit, RatCalc
    Hs-Source-Dirs:     ratcalc-src, ratcalc-test
    Ghc-Options:        -W -fno-warn-orphans

Test-Suite ratcalc_quickchecks
    type:               exitcode-stdio-1.0
    Main-Is:            RatCalc/RunQuickChecks.hs
    Build-Depends:      base, QuickCheck, HUnit, RatCalc
    Hs-Source-Dirs:     ratcalc-src, ratcalc-test
    Ghc-Options:        -W -fno-warn-orphans

Executable              ratcalc_benchmark
    Build-Depends:      base, old-time, RatCalc
    Main-Is:            Benchmark.hs
    Hs-Source-Dirs:     ratcalc-src, ratcalc-test
    ghc-options:        -W -O2 -threaded

Executable              ratcalc_print_pi
    Build-Depends:      base, RatCalc
    Main-Is:            RatCalc/Functions/Trigonometry/PrintPi.hs
    Hs-Source-Dirs:     ratcalc-src, ratcalc-test
    ghc-options:        -W -O2 -threaded -fno-warn-orphans -feager-blackholing -rtsopts

