name:                ratcalc
version:             0.3.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jimfarrand/ratcalc#readme
license:             GPL3
license-file:        LICENSE
author:              Jim Farrand
maintainer:          jim.farrand-ratcalc@xyxyx.org
copyright:           2017 Jim Farrand
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Xyxyx.RatCalc.ConstructiveReal
    , Xyxyx.RatCalc.ConstructiveReal.Num
  other-modules:       Xyxyx.RatCalc.ConstructiveReal.B
  build-depends:       base >= 4.9.1 && < 5
    , array >= 0.5
    , naturals
    , number
  default-language:    Haskell2010

executable ratcalc-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ratcalc
  default-language:    Haskell2010

test-suite ratcalc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ratcalc
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jimfarrand/ratcalc
